fixed middleware auth
